deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n1v1
  labels:
    name: n1v1
    app: trading-bot
